fix-newest-proposals-bottom-left-item-spacing

--- a/src/adhocracy/static_src/stylesheets/_geo.scss
+++ b/src/adhocracy/static_src/stylesheets/_geo.scss
@@ -119,7 +119,7 @@
 }
 
 #newest-proposals-bottom-left li.content_box {
-    padding-top: 5px;
+    padding: 0;
 }
 
 #newest-proposals-bottom-left li.content_box h3 {
